--- a/homeworks/02/index.html
+++ b/homeworks/02/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Ejer. 02 - Encontrar el factorial de cualquier número</h1>
 
 <script src="script.js"></script>
 </body>
