--- a/homeworks/06/index.html
+++ b/homeworks/06/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Ejer. 06 - Tomando la fecha de nacimiento ingresada por la usuario calcular el número de días que ha vivido</h1>
 
 <script src="script.js"></script>
 </body>
