--- a/homeworks/05/index.html
+++ b/homeworks/05/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Ejer. 05 - Leer el nombre de la persona e imprimirlo en la pantalla</h1>
 
 <script src="script.js"></script>
 </body>
