--- a/homeworks/07/index.html
+++ b/homeworks/07/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1> Ejer. 07 - Calcular el área de un triangulo</h1>
 
 <script src="script.js"></script>
 </body>
