--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -19,8 +19,8 @@
             <li> Ejer. 02 - Encontrar el factorial de cualquier número</li>
             <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
             <li> Ejer. 03 - Crear un login</li>
-            <a href="http://"><button>Ir al algoritmo</buttoEjer. 04 - Ordenar 5 números de mayor a menorn></a> <br><br>
-            <li> </li>
+            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 04 - Ordenar 5 números de mayor a menor </li>
             <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
             <li> Ejer. 05 - Leer el nombre de la persona e imprimirlo en la pantalla</li>
             <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
