--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -13,37 +13,34 @@
     <h1>Exercises</h1>
     <div>
         <ul>
-            <li> Ejer. 01 - Encontrar el mayor de 3 números</li>
-            <a href="/01/index.html
-            "><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 02 - Encontrar el factorial de cualquier número</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 03 - Crear un login</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 04 - Ordenar 5 números de mayor a menor </li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 05 - Leer el nombre de la persona e imprimirlo en la pantalla</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 06 - Tomando la fecha de nacimiento ingresada por la usuario calcular el número de días que ha vivido</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 07 - Calcular el área de un triangulo</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 08 - Calcular el volumen de una esfera</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 09 - Ingresar 10 valores numericos y mostrar cuantos son pares y cuantos impares</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 10 - Ingresar 10 valores numericos y mostrar cuantos son positivos y cuantos negativos</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 11 - Calcular el incremento salarial de una persona: Si su salario es menor a 15mil el incremento será del
-                20% y si es mayor a 15mil el incremento será del 15%</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 01 - Encontrar el mayor de 3 números.</li>
+            <a href="/01/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 02 - Encontrar el factorial de cualquier número.</li>
+            <a href="/02/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 03 - Crear un login.</li>
+            <a href="/03/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 04 - Ordenar 5 números de mayor a menor.</li>
+            <a href="/04/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 05 - Leer el nombre de la persona e imprimirlo en la pantalla.</li>
+            <a href="/05/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 06 - Tomando la fecha de nacimiento ingresada por la usuario calcular el número de días que ha vivido.</li>
+            <a href="/06/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 07 - Calcular el área de un triangulo.</li>
+            <a href="/07/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 08 - Calcular el volumen de una esfera.</li>
+            <a href="/08/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 09 - Ingresar 10 valores numericos y mostrar cuantos son pares y cuantos impares.</li>
+            <a href="/09/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 10 - Ingresar 10 valores numericos y mostrar cuantos son positivos y cuantos negativos.</li>
+            <a href="/10/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 11 - Calcular el incremento salarial de una persona: Si su salario es menor a 15mil el incremento será del 20% y si es mayor a 15mil el incremento será del 15%.</li>
+            <a href="/11/index.html"><button>Ir al algoritmo</button></a> <br><br>
             <li> Ejer. 12 - Desarrolla un algoritmo en pseudo código que valide si una palabra o frase es palindromo.</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 13 - Desarrolla un algoritmo en pseudo código que reciba un año y te responda si es o no es bisiesto</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 14 - Desarolla un algoritmo en pseudo código que reciba la velocidad y la distancia que tiene que recorrer un
-                carro y entrega cuánto tiempo le tomaría recorrer esa distancia.</li>
-            <a href="http://"><button>Ir al algoritmo</button></a> <br><br>
+            <a href="/12/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 13 - Desarrolla un algoritmo en pseudo código que reciba un año y te responda si es o no es bisiesto.</li>
+            <a href="/13/index.html"><button>Ir al algoritmo</button></a> <br><br>
+            <li> Ejer. 14 - Desarolla un algoritmo en pseudo código que reciba la velocidad y la distancia que tiene que recorrer un carro y entrega cuánto tiempo le tomaría recorrer esa distancia.</li>
+            <a href="/14/index.html"><button>Ir al algoritmo</button></a> <br><br>
         </ul>
     </div>
 
