--- a/homeworks/10/index.html
+++ b/homeworks/10/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1></h1>
+    <h1>Ejer. 10 - Ingresar 10 valores numericos y mostrar cuantos son positivos y cuantos negativos.</h1>
 
 <script src="script.js"></script>
 </body>
