--- a/homeworks/11/index.html
+++ b/homeworks/11/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Ejer. 11 - Calcular el incremento salarial de una persona: Si su salario es menor a 15mil el incremento será del 20% y si es mayor a 15mil el incremento será del 15%.</h1>
 
 <script src="script.js"></script>
 </body>
