--- a/homeworks/12/index.html
+++ b/homeworks/12/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1> Ejer. 12 - Desarrolla un algoritmo que valide si una palabra o frase es palindromo.</h1>
 
 <script src="script.js"></script>
 </body>
