folder name changes

--- a/01-hw-pseInt/index.html
+++ b/01-hw-pseInt/index.html
@@ -23,7 +23,7 @@
             <a href="/04/index.html"><button>Ir al algoritmo</button></a> <br><br>
             <li> Ejer. 05 - Leer el nombre de la persona e imprimirlo en la pantalla.</li>
             <a href="/05/index.html"><button>Ir al algoritmo</button></a> <br><br>
-            <li> Ejer. 06 - Tomando la fecha de nacimiento ingresada por la usuario calcular el número de días que ha vivido.</li>
+            <li> Ejer. 06 - Tomando la fecha de nacimiento ingresada por el usuario calcular el número de días que ha vivido.</li>
             <a href="/06/index.html"><button>Ir al algoritmo</button></a> <br><br>
             <li> Ejer. 07 - Calcular el área de un triangulo.</li>
             <a href="/07/index.html"><button>Ir al algoritmo</button></a> <br><br>
