--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    <h1>hola</h1>
+
+    <h1>Welcome to my projects of 
+        <br>Women In Tech</h1>
+
+    <main>
+        <a href="./02 -lugar-html_css_js/index.html"><button>APP Lugar Seguro </button></a>
+        <a href="./01-hw-pseInt/index.html"><button>JS Exercises </button></a>
+
+    </main>
 
 
 </body>
+
 </html>
