add changes in links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br>Women In Tech</h1>
 
     <main>
-        <a href="./02 -lugar-html_css_js/index.html"><button>APP Lugar Seguro </button></a>
+        <a href="./02-lugar-html_css_js/index.html"><button>APP Lugar Seguro </button></a>
         <a href="./01-hw-pseInt/index.html"><button>JS Exercises </button></a>
 
     </main>
