--- a/02-lugar-html_css_js/perfil/index.html
+++ b/02-lugar-html_css_js/perfil/index.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styleStatic.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <aside>
-       <a href="#"> <h2 class="Welcome">WELCOME</h2></a>
+       <a href="../index.html"> <h2 class="Welcome">WELCOME</h2></a>
         <div class="menu">
             <a href="/allLugares/index.html">  <div class="subtitle">Lista General</div></a>
             <a href="/registrarLugar/index.html">  <div class="subtitle">Registrar Lugar</div></a>
@@ -24,7 +24,7 @@
     </aside>
 
     <section>
-        <h1> INICIO </h1>
+        <h1> PERFIL </h1>
 
 
 
