--- a/02-lugar-html_css_js/misLugares/index.html
+++ b/02-lugar-html_css_js/misLugares/index.html
@@ -16,11 +16,10 @@
     <aside>
        <a href="../index.html"> <h2 class="Welcome">WELCOME</h2></a>
         <div class="menu">
-            <a href="/allLugares/index.html">  <div class="subtitle">Lista General</div></a>
-            <a href="/registrarLugar/index.html">  <div class="subtitle">Registrar Lugar</div></a>
-            <a href="/misLugares/index.html">  <div class="subtitle">Mis lugares</div></a>
-            <a href="/perfil/index.html">  <div class="subtitle">Perfil</div></a>
-        </div>
+            <a href="../allLugares/index.html">  <div class="subtitle">Lista General</div></a>
+            <a href="../registrarLugar/index.html">  <div class="subtitle">Registrar Lugar</div></a>
+            <a href="../misLugares/index.html">  <div class="subtitle">Mis lugares</div></a>
+            <a href="../perfil/index.html">  <div class="subtitle">Perfil</div></a>
     </aside>
 
     <section>
