last changes on all files

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
 
-    <h1>Welcome to my projects of 
-        <br>Women In Tech</h1>
+    <h1>Welcome to my projects of
+        <br>Women In Tech
+    </h1>
 
     <main>
-        <a href="./02-lugar-html_css_js/index.html"><button>APP Lugar Seguro </button></a>
+        <a href="./02-lugar-html_css_js/signUp.html"><button>APP Lugar Seguro </button></a>
         <a href="./01-hw-pseInt/index.html"><button>JS Exercises </button></a>
 
     </main>
-
 
 </body>
 
