--- a/02-lugar-html_css_js/perfil/index.html
+++ b/02-lugar-html_css_js/perfil/index.html
@@ -14,24 +14,43 @@
 <body>
 
     <aside>
-       <a href="../index.html"> <h2 class="Welcome">WELCOME</h2></a>
+        <a href="../index.html">
+            <h2 class="Welcome">WELCOME</h2>
+        </a>
         <div class="menu">
-            <a href="../allLugares/index.html">  <div class="subtitle">Lista General</div></a>
-            <a href="../registrarLugar/index.html">  <div class="subtitle">Registrar Lugar</div></a>
-            <a href="../misLugares/index.html">  <div class="subtitle">Mis lugares</div></a>
+            <a href="../allPlaces/index.html"><div class="subtitle">Lista General</div></a>
+            <a href="../registerPlace/index.html"><div class="subtitle">Registrar Lugar</div></a>
+            <a href="../myPlaces/index.html"><div class="subtitle">Mis lugares</div></a>
             <a href="../perfil/index.html">  <div class="subtitle">Perfil</div></a>
         </div>
     </aside>
 
     <section>
-        <h1> PERFIL. </h1>
+        <h1> PERFIL </h1>
+
+        <form action="">
 
 
-
-
-
-
-
+            <div id="name">
+                <div class="text-line">
+                    <label for="">Nombre</label>
+                    <input type="text" placeholder="Nombre">
+                </div>
+                <div class="text-line">
+                    <label for="">Apellido</label>
+                    <input type="text" placeholder="Apellido">
+                </div>
+            </div>
+            <div class="text-line">
+                <label for="">Correo</label>
+                <input type="email" placeholder="Correo">
+            </div>
+            <div class="text-line">
+                <label for="">Contrasena</label>
+                <input type="password" placeholder="Contrasena">
+            </div>
+            <button>Guardar</button>
+        </form>
 
     </section>
 
