--- a/02-lugar-html_css_js/registerPlace/index.html
+++ b/02-lugar-html_css_js/registerPlace/index.html
@@ -15,9 +15,9 @@
     <aside>
         <a href="../index.html"> <h2 class="Welcome">WELCOME</h2></a>
          <div class="menu">
-            <a href="../allLugares/index.html">  <div class="subtitle">Lista General</div></a>
-            <a href="../registrarLugar/index.html">  <div class="subtitle">Registrar Lugar</div></a>
-            <a href="../misLugares/index.html">  <div class="subtitle">Mis lugares</div></a>
+            <a href="../allPlaces/index.html">  <div class="subtitle">Lista General</div></a>
+            <a href="../registerPlace/index.html">  <div class="subtitle">Registrar Lugar</div></a>
+            <a href="../myPlaces/index.html">  <div class="subtitle">Mis lugares</div></a>
             <a href="../perfil/index.html">  <div class="subtitle">Perfil</div></a>
          </div>
      </aside>
@@ -43,11 +43,11 @@
             <div class="text-line address">
                 <div>
                     <input type="text" placeholder="Calle">
-                    <input type="text" placeholder="Numero">
+                    <input type="number" placeholder="Numero">
                     <input type="text" placeholder="Colonia">
                 </div>
                 <div>
-                    <input type="text" placeholder="C.P.">
+                    <input type="number" placeholder="C.P.">
                     <input type="text" placeholder="Delegacion">
                     <input type="text" placeholder="Ciudad">
                 </div>
