add new structure

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     </h1>
 
     <main>
-        <a href="./02-lugar-html_css_js/signUp.html"><button>APP Lugar Seguro </button></a>
+        <a href="/02_lugar-html_css_js/login.html"><button>Diseno de APP Lugar Seguro Html</button></a>
         <a href="./01-hw-pseInt/index.html"><button>JS Exercises </button></a>
+        <a href="https://docs.google.com/presentation/d/1zrh2YvhHc08bDdymCbUxvfd8jiuB_TfTRqQ3fpNF6ZE/edit?usp=sharing"><button>Presentacion JS</button></a>
+        <a href="https://docs.google.com/presentation/d/17TtLMa00euEB7OLA1Fm84jDcRrULjrbdw4lhrHd-hpY/edit?usp=sharing"><button>Presentacion Ajedrez</button></a>
+        <a href="/03_presentacionJS/index.html"><button>Ejercicios de Presentacion con JS </button></a>
 
     </main>
 
