--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <main>
         <a href="./01-hw-pseInt/index.html"><button>JS Exercises </button></a>
-        <a href="./02_lugarSeguroHtml/signUp.html"><button>Diseno de APP Lugar Seguro Html</button></a>
+        <a href=""><button>Diseno de APP Lugar Seguro Html</button></a>
+        <a href="./02_lugarSeguroHtml/login.html">login</a>
         <a href="https://docs.google.com/presentation/d/17TtLMa00euEB7OLA1Fm84jDcRrULjrbdw4lhrHd-hpY/edit?usp=sharing"><button>Presentacion Ajedrez</button></a>
         <br>
         <a href="https://docs.google.com/presentation/d/1zrh2YvhHc08bDdymCbUxvfd8jiuB_TfTRqQ3fpNF6ZE/edit?usp=sharing"><button>Presentacion JS</button></a>
